--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 title:		           'Deko Blog'
 description:	       'beginner programmer'
 author:              'Denis Kossa'
+baseurl:             'dekoblog'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
